# temp

./: .gitignore  README.md
algorithms/: CMakeLists.txt  bst.hpp  bst_test.cpp  test_main.cpp
asio_composed_operation/: Makefile  async_echo_client.cpp  echo_server.cpp
binary-tree/: display.cpp
boost_preprossor_test/: Makefile  set_get.cpp
brainfuck/: bf-interpreter-meta.cpp
calendar_by_ranges/: calendar.cpp
chess_horse/: chess_horse.pro  chessboard.cpp  chessboard.h  chessboard.ui  chessgrid.cpp  chessgrid.h  main.cpp
clang-tidy-cmake/: CMakeLists.txt  hello.cpp
cmake-modules-example/: CMakeLists.txt  hello.cpp  main.cpp
coro_qtimer/coro_qtimer/: CMakeLists.txt  main.cpp
cout_vs_printf/: CMakeLists.txt  cout_vs_printf.cpp
grpc-examples/: grpc-await.md  helloworld.grpc.pb.h
grpc-examples/MyHelloWorld/: Makefile  async_client.cpp  my_helloworld.grpc.pb.cc  my_helloworld.grpc.pb.h  my_helloworld.pb.cc  my_helloworld.pb.h  my_helloworld.proto  server.cpp
grpc-examples/helloworld/: Makefile  await_greeter_async_client2.cc  await_greeter_async_client2_1.cc  greeter_async_client2_boost_fcontext.cc  greeter_async_client2_boost_fiber.cc  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h
mac_cursor_center/: .gitignore  CMakeLists.txt  mac_cursor_center.cpp
mac_cursor_center_qt/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
move_cursor/: .gitignore  move_cursor.pro  widget.cpp  widget.h  widget.ui
plugin-pybind11/: CMakeLists.txt  enc_dec.h  enc_dec_test.py  enc_dec_wrapper.cpp  main.cpp
rand_bmp/: rand_bmp.cpp
senders-qt/: CMakeLists.txt  main.cpp  qtstdexec.h
stdexec-qt/: CMakeLists.txt  README.md  httpdownloader.cpp  httpdownloader.h  main.cpp  main.qml  qtstdexec.h
string-split/: ranges.cpp  vector-string.cpp
trim/: .gitignore  CMakeLists.txt  widget.cpp  widget.ui
uncategorized/: co_vs_callback.cpp  coroutine.md
water_pour/: pour.cpp
